@@ -68,7 +68,7 @@ init
 create/set/get
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12...
 init
- 1... 2...
+ 1... 2... 3... 4...
 kind_size_in_bytes
  1... 2... 3... 4... 5... 6... 7... 8... 9... 10... 11... 12... 13...
 
